@@ -128,6 +128,9 @@ void c_elsi_set_uplo(elsi_handle handle_c,
 void c_elsi_set_elpa_solver(elsi_handle handle_c,
                             int elpa_solver);
 
+void c_elsi_set_elpa_n_single(elsi_handle handle_c,
+                              int n_single);
+
 void c_elsi_set_elpa_gpu(elsi_handle handle_c,
                          int use_gpu);
 
