@@ -46,6 +46,7 @@ module ELSI
    public :: elsi_set_sing_stop
    public :: elsi_set_csc_blk
    public :: elsi_set_elpa_solver
+   public :: elsi_set_elpa_n_single
    public :: elsi_set_elpa_gpu
    public :: elsi_set_elpa_gpu_kernels
    public :: elsi_set_omm_flavor
