@@ -1,3 +1,11 @@
+==================
+   Not Released
+==================
+
+   ELPA:
+   * For externally linked ELPA, added an option to perform single
+     precision calculations.
+
 ============================
    ELSI May 2018 (v2.0.2)
 ============================
